fix: align split screen with banner height

--- a/src/components/SplitScreen.scss
+++ b/src/components/SplitScreen.scss
@@ -28,10 +28,10 @@
 
 .split-container {
   position: fixed;
-  top: 0;
+  top: 8rem;
   left: 0;
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 8rem);
   z-index: 999;
   pointer-events: none;
   display: flex;
